kustomize/apps/syncwatch/base/namespace.syncwatch.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: syncwatch
  labels:
    app.kubernetes.io/name: syncwatch
    app.kubernetes.io/part-of: syncwatch
