kustomize/apps/syncwatch/base/deployment.syncwatch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncwatch
  namespace: syncwatch
  labels:
    app.kubernetes.io/name: syncwatch
    app.kubernetes.io/part-of: syncwatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: syncwatch
  template:
    metadata:
      labels:
        app.kubernetes.io/name: syncwatch
        app.kubernetes.io/part-of: syncwatch
    spec:
      serviceAccountName: syncwatch
      containers:
      - name: syncwatch
        image: syncwatch:0.1.0
        imagePullPolicy: IfNotAlways
        command:
        - /bin/syncwatch
        args:
        - --namespace=argocd
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: 25m
            memory: 48Mi
          limits:
            cpu: 35m
            memory: 64Mi
        livenessProbe:
          periodSeconds: 30
          initialDelaySeconds: 10
          httpGet:
            port: http
            path: /healthz
        readinessProbe:
          periodSeconds: 10
          initialDelaySeconds: 2
          httpGet:
            port: http
            path: /healthz
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 65534
          runAsGroup: 65534
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePolicy: FallbackToLogsOnError
